--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="space-y-4">
                         <label class="block">Email Address*</label>
                         <div>
-                            <input type="text" placeholder="Please type your email address" class="text-sm border-b-2 w-96" id="email" />
+                            <input type="text" placeholder="Please type your email address" class="outline-none text-sm border-b-2 w-96" id="email" />
                             <div class="text-xs text-right text-red-600" id="error"></div>
                         </div>
                     </div>
